# quotek-core

./: .buildctl  .buildctl.BASE.7003.buildctl  .buildctl.LOCAL.7003.buildctl  .buildctl.REMOTE.7003.buildctl  .buildctl.orig  .gitignore  BUGS  CMakeLists.txt  INSTALL  INSTALL.TXT  LICENSE  SPECS_V5  TODO  buildctl
cfiles/: compile.sh  finmath.c  modules.c  narrays.c  quant.c  quant.h  queue_c.c  records.c  records.h  store.c  store.h  strats.c  strats.h
install/doc/: index.html
install/etc/: adam.conf
install/strats/: dummy.ts
install/tools/: cbackup.sh  cleanall.sh  debug.sh
modules.old/: README
modules.old/alert/: CMakeLists.txt  package.sh
modules.old/alert/cfiles/: alert.c
modules.old/alert/install/compile/headers/: alert.h
modules.old/alert/src/: alert.cpp
modules.old/mdebug/: CMakeLists.txt  cleanup.sh
modules.old/vstore/: CMakeLists.txt
modules/deepthroat/: CMakeLists.txt
modules/deepthroat/src/: narrays.cpp
modules/edta/: CMakeLists.txt  Makefile  cmake_install.cmake  package.sh
modules/edta/install/etc/: alert.conf
modules/edta/src/: adammodule.h  edta.cpp  store.cpp
modules/performance/: performance.cpp
modules/vstore/: CMakeLists.txt  Makefile  cmake_install.cmake  dump.vdump  package.sh
modules/vstore/install_test/: dump2vstore  install.sh
modules/vstore/src/: dump2vstore.cpp  odbc.cpp  odbc.h  vstore.cpp  vstorectl.cpp
qsa/: finmath.h  lgrid.c  lgrid.h  modules.h  narrays.c  quant.c  quant.h  queue_c.h  store.h  strats.c  strats.h
qss.bak/: compile.sh  core.cpp  core.hpp  quant.cpp  quant.hpp  records.c  release.sh
resources/: SPECS_V4  SPECS_V5  SPECS_V6  Specs_v4.txt  connline
sdk/: CMakeLists.txt  clean.sh  release.sh
sdk/benchmarks/: CMakeLists.txt
sdk/benchmarks/src/: bench_record.cpp
sdk/doxygen/: DEPENDANCIES  makedoc.sh  sdk.doxy  sdk2.doxy
sdk/doxygen/breathe/: Makefile
sdk/doxygen/breathe/source/: alchemy.rst  broker_interact.rst  conf.py  csv.rst  data_sources.rst  data_struct.rst  etoro.rst  firstcode.rst  further.rst  index.rst  install.rst  marray.rst  ml.rst  mlstruct.rst  news.rst  quandl.rst  quant.rst  records.rst  samples.rst  start.rst  strategy.rst  twitter.rst
sdk/doxygen/breathe/source/_static/css/: quotek.css
sdk/doxygen/breathe/source/_static/js/: quotek.js
sdk/doxygen/breathe/source/_templates/: layout.html
sdk/github/: README.md  quotek_sdk_ns.xml
sdk/quotek-sdk-2.0.0/doc/html/: blackscholes.html  broker.html  broker_interact.html  index.html  ml.html  news.html  objects.inv  quant.html  record.html  samples.html  search.html  start.html
sdk/quotek-sdk-2.0.0/doc/html/_sources/: data_struct.txt  firstcode.txt  install.txt  quant.txt  rss.txt  samples.txt  yahoo.txt
sdk/quotek-sdk-2.0.0/include/quotek/: broker.hpp  option.hpp  record.hpp  strategy.hpp
sdk/quotek-sdk-2.0.0/include/quotek/datasources/: rss.hpp  yahoofinance.hpp
sdk/quotek-sdk-2.0.0/tests/: clean.sh
sdk/quotek-sdk-2.0.0/tests/src/: test_blackscholes.cpp  test_broker.cpp  test_generators.cpp  test_timeutils.cpp
sdk/release/: installer_linux.sh  installer_win64.bat
sdk/release/doc/html/: alchemy.html  blackscholes.html  broker.html  broker_interact.html  data_sources.html  data_struct.html  firstcode.html  generators.html  genindex.html  history.html  index.html  install.html  ml.html  mlstruct.html  news.html  objects.inv  quant.html  record.html  records.html  rss.html  samples.html  search.html  searchindex.js  start.html  ta.html  yahoo.html
sdk/release/doc/html/_sources/: alchemy.txt  data_sources.txt  firstcode.txt  generators.txt  install.txt  ml.txt
sdk/release/include/quotek/: blackscholes.hpp  constants.hpp  core.hpp  cvector.hpp  history.hpp  news.hpp  position.hpp  timeutils.hpp
sdk/release/tests/src/: test_alchemy.cpp  test_position.cpp  test_quant.cpp  test_strategy.cpp
sdk/samples/: sentiment.cpp  sma_trend.cpp
sdk/src/: alchemy.cpp  alchemy.hpp  any.hpp  backend.hpp  blackscholes.cpp  blackscholes.hpp  blacksholes.cpp  blacksholes.hpp  broker.cpp  broker.hpp  constants.hpp  core.hpp  cqueue.hpp  cvector.hpp  datasource.hpp  email.cpp  email.hpp  generators.cpp  generators.hpp  history.cpp  history.hpp  http.cpp  http.hpp  imap.cpp  imap.hpp  json.cpp  json.hpp  kalman.hpp  linearregression.cpp  linearregression.hpp  logisticregression.cpp  logisticregression.hpp  marray.hpp  matrixutils.cpp  matrixutils.hpp  ml.cpp  ml.hpp  mlstructures.hpp  news.hpp  nlp.hpp  (+21 more)
sdk/src/cppoptlib/: meta.h  problem.h
sdk/src/cppoptlib/solver/: bfgssolver.h
sdk/src/datasources/: csv.cpp  csv.hpp  etoro.cpp  etoro.hpp  oanda.cpp  oanda.hpp  quandl.cpp  quandl.hpp  rss.cpp  rss.hpp  twitter.cpp  twitter.hpp  yahoofin.hpp  yahoofinance.cpp  yahoofinance.hpp
sdk/src/twitcurl/: twitcurl.cpp  twitcurl.h
sdk/tests/: CMakeLists.txt  _test.sh  launch_tests.sh  testconf.sh
sdk/tests/fixtures/: email.txt  test1.csv  test2.csv
sdk/tests/python/: test.py  test_quandl.py
sdk/tests/src/: test_alchemy.cpp  test_blackscholes.cpp  test_broker.cpp  test_csv.cpp  test_email.cpp  test_etoro.cpp  test_generators.cpp  test_imap.cpp  test_json.cpp  test_kalman.cpp  test_linear_regression.cpp  test_logistic_regression.cpp  test_marray.cpp  test_ml.cpp  test_oanda.cpp  test_position.cpp  test_quandl.cpp  test_quant.cpp  test_record.cpp  test_rss.cpp  test_strategy.cpp  test_techanalysis.cpp  test_timeutils.cpp  test_twitter.cpp  test_yahoofinance.cpp
src/: adam.cpp  adam.h  csv2dump.cpp  csv2influx.cpp  pyinterface.cpp  qate.cpp  qate.h  qatecache.cpp
src/lib/: adamcfg.cpp  adamcfg.h  adammodule.h  aep.cpp  aep.h  aep_ws.cpp  aep_ws.hpp  broker.hpp  brokerio.hpp  btengine.cpp  btengine.h  btf.hpp  constants.h  constants.h.orig  constants.h.tpl  cvector.hpp  extmodule.h  finmath.cpp  genetics.cpp  genetics.h  hsbt.cpp  hsbt.h  http.cpp  http.hpp  igmlogger.cpp  igmlogger.h  (+34 more)
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  run.sh  test_backend_influxdb  test_records
tests/unit/: test_backend_influxdb.cpp  test_nloop.cpp  test_records.cpp  test_utils.cpp
tools/: influx-history.py  init_pgsql.sh
(+61 files in other folders)
